tests/bad/bad_call_func.glaz
fn y(_a: i32) {}
fn z(_b: i32, _c: i32) {}

fn main() {
  y(10, 11);
  z(10);
}
